website/src/components/Header.module.css
.header {
  position: fixed;
  top: 0;
  width: 100vw;
  padding: 0 40px;
  flex-wrap: nowrap;
  justify-content: space-between;
  align-items: center;
  height: 80px;
  box-sizing: border-box;
  color: #fff;
  background: #ffffff;
  box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.1);
  z-index: 999;
  display: flex;
  column-gap: 32px;
}
.header a {
  color: #171a22;
  text-decoration: none;
}

.headerMain {
  display: flex;
  align-items: center;
  column-gap: 32px;
  flex: 2;
}

.nav {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: nowrap;
  column-gap: 24px;
  flex: 1;
}
.item {
  font-size: 16px;
}
.item:hover {
  text-decoration: underline;
}
.logo {
  display: flex;
  align-items: center;
  margin-top: 4px;
  font-family: 'Factor A';
  text-align: center;
  font-size: 22px;
  line-height: 130%;
  color: #ff622d;
  font-weight: 700;
}
.semrushLogo {
  margin-right: 8px;
  margin-bottom: 6px;
  width: 30px;
  height: 30px;
}
.devportalLink {
  display: flex;
  align-items: center;
}
.devportalLink:hover,
.intergalacticLink:hover {
  text-decoration: underline;
}
.intergalacticLink {
  color: #ff642d !important;
}

.headerTooltip {
  font-size: 12px;
  border: 1px solid #d1d4db;
  box-shadow: 5px 8px 25px rgba(137, 141, 154, 0.2);
  z-index: 1000;
}
.linkDivider {
  align-self: center;
}
.searchWrapper {
  flex: 1;
  max-width: 350px;
}
.searchField {
  flex: 1;
}
.menuIcon {
  color: var(--gray-800);
  cursor: pointer;
  display: none;
  margin-right: 6px;
  width: 20px;
  height: 20px;
  padding: 30px 0;
  padding-left: 0;
}
.activeMenuIcon {
  background-color: #f6f7f8;
}
.searchIcon {
  color: var(--gray-800);
  cursor: pointer;
  display: none;
}

.mobileMenu {
  background-color: #f6f7f8;
  display: none;
  min-width: 320px;
  max-width: 100vw;
  position: fixed;
  left: 0;
  top: 80px;
  height: calc(100vh - 80px);
  overflow: auto;
}
.mobileMenuLinks {
  display: flex;
  flex-direction: column;
  padding: 30px 40px;
  row-gap: 20px;
}

.mobileMenuDivider {
  padding: 10px 40px;
  display: none;
}
.mobileMenuNavigation {
  display: none;
}

@media (max-width: 970px) {
  .nav {
    display: none;
  }
}

@media (max-width: 768px) {
  .headerMain {
    column-gap: 0;
  }
  .header {
    padding: 0;
    padding-right: 20px;
  }
  .searchWrapper {
    max-width: 100%;
    margin-left: 32px;
  }
  .mobileMenu {
    display: block;
  }
  .menuIcon {
    display: block;
    padding-left: 30px;
    padding-right: 30px;
  }
  .semrushLogo {
    display: none;
  }
  .mobileMenuDivider {
    display: block;
  }
  .mobileMenuNavigation {
    display: block;
  }
}
@media (max-width: 540px) {
  .searchField {
    display: none;
  }
}
@media (max-width: 320px) {
  .headerMain {
    column-gap: 0;
  }
  .devportalLink__mobile {
    display: none;
  }
  .semrushLogo {
    display: block;
  }
  .menuIcon {
    padding-right: 20px;
    padding-left: 20px;
    margin-right: 0;
  }
  .mobileSearchHidden {
    display: none;
  }
  .searchWrapper {
    margin-left: 20px;
    margin-right: 0;
  }
  .searchIcon {
    display: flex;
    position: absolute;
    right: 20px;
  }
  .searchWrapper input::placeholder {
    color: white;
  }
  .activeSearch {
    display: none;
  }
}

